// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Client Details when editing 1`] = `
<div
  className="ClientDetails-root-287"
>
  <div>
    <form>
      <h1
        className="MuiTypography-root-290 MuiTypography-display3-292 MuiTypography-gutterBottom-307"
      >
        Some Client
      </h1>
      <div>
        <span>
          <button
            className="MuiButtonBase-root-329 MuiButton-root-314 MuiButton-raised-319 MuiButton-raisedPrimary-321 ClientDetails-button-289"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-315"
            >
              Update
            </span>
            <span
              className="MuiTouchRipple-root-331"
            />
          </button>
          <button
            className="MuiButtonBase-root-329 MuiButton-root-314 MuiButton-raised-319 ClientDetails-button-289"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-315"
            >
              Cancel
            </span>
            <span
              className="MuiTouchRipple-root-331"
            />
          </button>
        </span>
      </div>
      <div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-338 MuiFormControl-marginNormal-339 ClientDetails-textField-288"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="MuiFormLabel-root-348 MuiInputLabel-root-342 MuiInputLabel-formControl-343 MuiInputLabel-animated-346 MuiInputLabel-shrink-345"
            data-shrink={true}
            htmlFor="name"
          >
            Name
          </label>
          <div
            className="MuiInput-root-352 MuiInput-formControl-353 MuiInput-inkbar-354 MuiInput-underline-358"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-361"
              defaultValue={undefined}
              disabled={false}
              id="name"
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={false}
              required={undefined}
              rows={undefined}
              type="text"
              value="Some Client"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Client Details when loading 1`] = `
<div
  className="ClientDetails-root-188"
>
  <div
    className="MuiLinearProgress-root-191 MuiLinearProgress-primaryColor-192"
    mode="query"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar-198 MuiLinearProgress-primaryColorBar-193 MuiLinearProgress-indeterminateBar1-203"
      style={Object {}}
    />
    <div
      className="MuiLinearProgress-bar-198 MuiLinearProgress-primaryColorBar-193 MuiLinearProgress-indeterminateBar2-204"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Storyshots Client Details when updating 1`] = `
<div
  className="ClientDetails-root-367"
>
  <div>
    <form>
      <h1
        className="MuiTypography-root-370 MuiTypography-display3-372 MuiTypography-gutterBottom-387"
      >
        Some Client
      </h1>
      <div>
        <span>
          <button
            className="MuiButtonBase-root-409 MuiButtonBase-disabled-410 MuiButton-root-394 MuiButton-raised-399 MuiButton-raisedPrimary-401 MuiButton-disabled-403 ClientDetails-button-369"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-395"
            >
              Update
            </span>
          </button>
          <button
            className="MuiButtonBase-root-409 MuiButtonBase-disabled-410 MuiButton-root-394 MuiButton-raised-399 MuiButton-disabled-403 ClientDetails-button-369"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-395"
            >
              Cancel
            </span>
          </button>
        </span>
      </div>
      <div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-411 MuiFormControl-marginNormal-412 ClientDetails-textField-368"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="MuiFormLabel-root-421 MuiInputLabel-root-415 MuiInputLabel-formControl-416 MuiInputLabel-animated-419 MuiInputLabel-shrink-418"
            data-shrink={true}
            htmlFor="name"
          >
            Name
          </label>
          <div
            className="MuiInput-root-425 MuiInput-formControl-426 MuiInput-inkbar-427 MuiInput-underline-431"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-434"
              defaultValue={undefined}
              disabled={false}
              id="name"
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={false}
              required={undefined}
              rows={undefined}
              type="text"
              value="Some Client"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Client Details with a client 1`] = `
<div
  className="ClientDetails-root-207"
>
  <div>
    <form>
      <h1
        className="MuiTypography-root-210 MuiTypography-display3-212 MuiTypography-gutterBottom-227"
      >
        Some Client
      </h1>
      <div>
        <span>
          <button
            className="MuiButtonBase-root-249 MuiButton-root-234 MuiButton-raised-239 ClientDetails-button-209"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-235"
            >
              Edit
            </span>
            <span
              className="MuiTouchRipple-root-251"
            />
          </button>
          <button
            className="MuiButtonBase-root-249 MuiButton-root-234 MuiButton-raised-239 MuiButton-raisedSecondary-242 ClientDetails-button-209"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-235"
            >
              Remove
            </span>
            <span
              className="MuiTouchRipple-root-251"
            />
          </button>
        </span>
      </div>
      <div>
        <div
          aria-describedby={undefined}
          className="MuiFormControl-root-258 MuiFormControl-marginNormal-259 ClientDetails-textField-208"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <label
            className="MuiFormLabel-root-268 MuiInputLabel-root-262 MuiInputLabel-formControl-263 MuiInputLabel-animated-266 MuiInputLabel-shrink-265"
            data-shrink={true}
            htmlFor="name"
          >
            Name
          </label>
          <div
            className="MuiInput-root-272 MuiInput-formControl-273 MuiInput-inkbar-274 MuiInput-underline-278"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <input
              aria-invalid={false}
              aria-required={false}
              autoComplete={undefined}
              autoFocus={undefined}
              className="MuiInput-input-281"
              defaultValue={undefined}
              disabled={false}
              id="name"
              name={undefined}
              onChange={[Function]}
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              readOnly={true}
              required={undefined}
              rows={undefined}
              type="text"
              value="Some Client"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Clients List with adding a new client 1`] = `
<table
  className="MuiTable-root-135 ClientsList-root-131"
>
  <thead>
    <tr
      className="MuiTableRow-root-136 MuiTableRow-typeHead-137"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeHead-143"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-136"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144"
        scope={undefined}
      >
        <div
          className="MuiInput-root-149 MuiInput-disabled-154 MuiInput-inkbar-151 MuiInput-underline-155"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-158 MuiInput-inputDisabled-160"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Some New Client"
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144 ClientsList-actionCell-133"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-132"
        >
          <button
            className="MuiButtonBase-root-179 MuiButtonBase-disabled-180 MuiButton-root-164 MuiButton-flatPrimary-166 MuiButton-disabled-173"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-165"
            >
              Add
            </span>
          </button>
          <div
            className="MuiCircularProgress-root-181 MuiCircularProgress-colorPrimary-182 ClientsList-buttonProgress-134"
            role="progressbar"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg-184 MuiCircularProgress-svgIndeterminate-185"
              viewBox="0 0 50 50"
            >
              <circle
                className="MuiCircularProgress-circle-186 MuiCircularProgress-circleIndeterminate-187"
                cx={25}
                cy={25}
                fill="none"
                r={20}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-136"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-141 MuiTableCell-paddingDefault-146 MuiTableCell-typeBody-144"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with loading all clients 1`] = `
<table
  className="MuiTable-root-62 ClientsList-root-58"
>
  <thead>
    <tr
      className="MuiTableRow-root-63 MuiTableRow-typeHead-64"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeHead-70"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        scope={undefined}
      >
        <div
          className="MuiInput-root-76 MuiInput-inkbar-78 MuiInput-underline-82"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-85"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71 ClientsList-actionCell-60"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-59"
        >
          <button
            className="MuiButtonBase-root-106 MuiButton-root-91 MuiButton-flatPrimary-93"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-92"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-108"
            />
          </button>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        colSpan={2}
        scope={undefined}
      >
        <div
          className="MuiLinearProgress-root-115 MuiLinearProgress-primaryColor-116"
          mode="query"
          role="progressbar"
        >
          <div
            className="MuiLinearProgress-bar-122 MuiLinearProgress-primaryColorBar-117 MuiLinearProgress-indeterminateBar1-127"
            style={Object {}}
          />
          <div
            className="MuiLinearProgress-bar-122 MuiLinearProgress-primaryColorBar-117 MuiLinearProgress-indeterminateBar2-128"
            style={Object {}}
          />
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-63"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-68 MuiTableCell-paddingDefault-73 MuiTableCell-typeBody-71"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with no clients 1`] = `
<table
  className="MuiTable-root-5 ClientsList-root-1"
>
  <thead>
    <tr
      className="MuiTableRow-root-6 MuiTableRow-typeHead-7"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeHead-13"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-6"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeBody-14"
        scope={undefined}
      >
        <div
          className="MuiInput-root-19 MuiInput-inkbar-21 MuiInput-underline-25"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-28"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-11 MuiTableCell-paddingDefault-16 MuiTableCell-typeBody-14 ClientsList-actionCell-3"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-2"
        >
          <button
            className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-flatPrimary-36"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-35"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-51"
            />
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
